add ruc consult
